# web-video-test

./: README.md
backend/: .gitignore  environment.yml  pyproject.toml  start.sh
backend/backend/: hls_example.py  hls_stream.py  main.py
frontend/: package-lock.json  package.json
