[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eric Principato <eric.principato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
fastapi = "^0.63.0"
av = "^8.0.3"
uvicorn = "^0.13.3"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
